welcome.lessons.welcome.array.array667.Array667.scala.error
array667:14: error: type mismatch;
 found   : (Int, Int)
 required: Int
  return (cpt66,cpt67)
         ^